# evalmyai-python

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: _quarto.yml  batch.qmd  context.qmd  first_steps.qmd  index.qmd  outputs.md  scoring.qmd
docs/_extensions/profinit/profinit/: _extension.yml  custom-reference-doc.docx
docs/_extensions/profinit/profinit/style/: logo.css  revealjs-brackets-logo.css
docs/_extensions/profinit/profinit/tex/: header.tex  logo.tex
docs/_extensions/profinit/profinit/theme/: light-common.scss  light-html.scss  light-revealjs.scss
examples/: LangChain_evaluation.ipynb  ex_1_simple.py  ex_2_context.py  ex_3_dataset.py  ex_4_test_case.py  test_case_input.json  test_case_output.json  utils.py
scripts/: init.sh
src/evalmyai/: __init__.py  _evalmyai.py  _utils.py  _validators.py  evalmyai.py
tests/: test_evalmyai.py  test_validators.py
tests/evalmyai/: test_evalmyai.py  test_validators.py
