[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "evalmyai"
description = "EVALMY.AI Python library"
readme = "README.md"
version = "0.1.0a10"
dependencies = [
    "requests",
    "pandas",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3"
]
license = {file = "LICENSE"}


[tool.setuptools.packages.find]
where = ["src"]
